...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_gradient_background"
    tools:context=".FragmentShowMessages">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_messages"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:background="#F5F5F5"
        app:layout_constraintTop_toTopOf="parent">

...
            android:gravity="center|left"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/darkgrey"
                android:textSize="18dp"
                android:textStyle="bold" />
...
                android:textSize="16dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ExpandableListView
        android:id="@+id/expandableView_show_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:groupIndicator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
