<resources>
    <string name="app_name">EVERNEWS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="button_next">NEXT</string>
    <string name="button_back">BACK</string>
    <string name="button_finish">FINISH</string>
    <string name="button_save">SAVE</string>
    <string name="button_delete_newsgroup">Delete newsgroup</string>
    <string name="button_delete_subgroup">Delete subgroup</string>

    <string name="header1_newsgroup">ADD NEWSGROUP</string>
    <string name="header2_newsgroup">Add a newsgroup</string>
    <string name="header1_subscribe">SUBSCRIBE</string>
    <string name="header2_subscribe">Select your subgroups</string>
...
